objects/Case_Group_Users__c.object
<CustomObject>
    <fields>
        <fullName>CaseGroup__c</fullName>
        <label>CaseGroup</label>
        <referenceTo>CaseGroup__c</referenceTo>
        <relationshipLabel>CaseGroupUsers</relationshipLabel>
        <relationshipName>GroupUSers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case_Group_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Group Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>CaseGroupUsers</relationshipLabel>
        <relationshipName>CaseGroupUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Viewer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GroupUSers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Group Users</label>
    <nameField>
        <label>Serial number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CaseGroupUsers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>